--- a/docu-sense/frontend/index.html
+++ b/docu-sense/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg" href="/docu-sense/frontend/src/assets/a.svg" />
+    <link rel="icon" type="image/svg" href="assets/a.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DocuSense</title>
   </head>
